# cambrian

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  VISION.md  pyproject.toml
.claude/: failure-log.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
cambrian/: __init__.py  __main__.py  a2a.py  agent.py  annealing.py  apoptosis.py  archipelago.py  cache.py  catalysis.py  causal.py  cli.py  cli_tools.py  code_genome.py  coevolution.py  compress.py  constitutional.py  curriculum.py  dashboard.py  diffcot.py  diversity.py  dpo.py  dream.py  ecosystem.py  ensemble.py  epigenetics.py  evaluator.py  evolution.py  export.py  fractal.py  glossolalia.py  hgt.py  hormesis.py  immune.py  immune_memory.py  inference_scaling.py  lamarck.py  llm_cascade.py  mcts.py  memory.py  meta_evolution.py  (+22 more)
cambrian/backends/: __init__.py  anthropic.py  base.py  gemini.py  openai_compat.py
cambrian/evaluators/: __init__.py  baldwin.py  code.py  composite.py  llm_judge.py  variance_aware.py
cambrian/utils/: __init__.py  logging.py  sandbox.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKS.md  COMPARISON.md  DEPLOYMENT.md  ENV_VARS.md  FAQ.md  METHODOLOGY.md  PAPER_OUTLINE.md  PRD.md  QUICKSTART.md  ROADMAP.md  TUTORIAL.md
examples/: benchmark.py  demo_archipelago.py  demo_dpo_safeguards.py  demo_end_to_end.py  demo_epigenetics.py  demo_full_evolution.py  demo_multi_objective.py  demo_neuro_immune_loop.py  demo_tier3_tier4.py  evolve_coding.py  evolve_fizzbuzz.py  evolve_forge_code.py  evolve_prompt.py  evolve_researcher.py  evolve_with_dream.py  evolve_with_moa.py  evolve_with_quorum.py  evolve_with_reflexion.py
poc_attacks/: poc_1_sandbox_escape.py  poc_2_tool_rce.py  poc_3_drift_bypass.py
scripts/: benchmark.py
tests/: __init__.py  conftest.py  test_a2a.py  test_agent.py  test_annealing.py  test_apoptosis.py  test_cache_router_stats.py  test_catalysis.py  test_causal_curriculum_constitutional.py  test_cli_round8.py  test_cli_tools.py  test_code_genome.py  test_code_genome_edge.py  test_coevo_epigenetics_mcts.py  test_dashboard.py  test_dpo.py  test_dpo_extra.py  test_dream.py  test_dream_quorum.py  test_ecosystem.py  test_edge_cases.py  test_edge_cases_round9.py  test_edge_cases_tier3.py  test_edge_cases_tier4.py  test_edge_cases_tier5.py  test_ensemble.py  test_evaluator.py  test_evolution.py  test_export.py  test_fractal.py  test_glossolalia.py  test_hgt.py  test_hormesis.py  test_immune_memory.py  test_inference_scaling.py  test_integration_quorum_dream_apoptosis.py  test_integration_real.py  test_integration_techniques.py  test_lamarck_diffcot_tools.py  test_llm_cascade.py  (+25 more)
