[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cambrian-ai"
version = "1.0.4"
description = "Evolve AI agents autonomously. One command. Zero manual tuning."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["llm", "agents", "evolution", "genetic-algorithm", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "networkx>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.0",
    "mypy>=1.0",
    "ruff>=0.4",
]

[project.scripts]
cambrian = "cambrian.cli:main"

[project.urls]
Homepage = "https://github.com/Franck1120/cambrian"
Repository = "https://github.com/Franck1120/cambrian"
Issues = "https://github.com/Franck1120/cambrian/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
python_version = "3.11"

[tool.hatch.build.targets.wheel]
packages = ["cambrian"]
